plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
    id 'com.google.cloud.tools.jib' version '3.4.1'
}

group = 'yousang.backend'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

def jsonFile = file('config.json')
def parsedJson = new groovy.json.JsonSlurper().parseText(jsonFile.text)

def parseImage = parsedJson.get('base_path') + '/' + parsedJson.get('rest_tag') ?: parsedJson.get('base_path') + '/' + parsedJson.get('default_rest_tag')
def parseAllowInsecureRegistries = parsedJson.get('allow_insecure_registries') ?: false

jib {
    from {
        image = 'openjdk:21-slim'
        platforms {
            platform{
                os = 'linux'
                architecture = 'amd64'
            }
        }
    }
    to {
        image = parseImage
    }
    
    container {
        allowInsecureRegistries = parseAllowInsecureRegistries  // **Not recommended for production**
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'io.netty:netty-resolver-dns-native-macos'
    implementation group: 'org.json', name: 'json', version: '20240303'
    implementation 'org.jsoup:jsoup:1.17.2'
}

// tasks.named('test') {
//     outputs.dir snippetsDir
//     useJUnitPlatform()
// }

// tasks.named('asciidoctor') {
//     inputs.dir snippetsDir
//     dependsOn test
// }